@@ -77,6 +77,8 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Ensure the capitalisation of the `timesince_simple` tag is consistently added in the template based on usage in context (Stefan Hammer)
  * Add missing translation usage for the `timesince_last_update` and ensure the translated labels can be easier to work with in Transifex (Stefan Hammer)
  * Add additional checks for duplicate form field `clean_name` values in the Form Builder validation and increase performance of checks (Dan Bentley)
+ * Use correct color for labels of radio and checkbox fields (Steven Steinwand)
+ * Adjust spacing of fields’ error messages and position in tables (Steven Steinwand)
 
 ## Upgrade considerations
 
